libreoffice .desktop fixes

--- a/buildquantumvis/rootfs/rootfs-skeleton/usr/share/applications.in/scalc.desktop
+++ b/buildquantumvis/rootfs/rootfs-skeleton/usr/share/applications.in/scalc.desktop
@@ -1,133 +1,133 @@
 [Desktop Entry]
 Encoding=UTF-8
-Name[de]=Libreoffice Calc Tabellenkalkulationseditor
-Name[fr]=Éditeur de feuille de calcul : Libreoffice Calc
-Name[es]=Libreoffice Calc: hoja de cálculo
-Name[af]=Libreoffice Calc sigbladredigeerder
-Name[am]=Libreoffice Calc የተመን ሉህ አርታዒ
-Name[ar]=Libreoffice Calc ﺕﺎﻧﺎﻴﺒﻟﺍ ﻝﻭﺍﺪﺟ ﺭﺮﺤﻣ
-Name[as]=Libreoffice Calc স্প্ৰেডশ্বীট সম্পাদক
-Name[ay]=Libreoffice Calc ukax mä jach’a uñacht’äwiwa
-Name[az]=Libreoffice Calc elektron cədvəl redaktoru
-Name[ba]=Libreoffice Calc электрон таблицаһы мөхәррире
-Name[be]=Таблічны рэдактар Libreoffice Calc
-Name[bg]=Libreoffice Calc редактор на електронни таблици
-Name[bm]=Libreoffice Calc ka jatebɔsɛbɛnw ɲɛnabɔbaga
-Name[bn]=Libreoffice Calc স্প্রেডশীট সম্পাদক
+Name[de]=LibreOffice Calc Tabellenkalkulationseditor
+Name[fr]=Éditeur de feuille de calcul : LibreOffice Calc
+Name[es]=LibreOffice Calc: hoja de cálculo
+Name[af]=LibreOffice Calc sigbladredigeerder
+Name[am]=LibreOffice Calc የተመን ሉህ አርታዒ
+Name[ar]=LibreOffice Calc ﺕﺎﻧﺎﻴﺒﻟﺍ ﻝﻭﺍﺪﺟ ﺭﺮﺤﻣ
+Name[as]=LibreOffice Calc স্প্ৰেডশ্বীট সম্পাদক
+Name[ay]=LibreOffice Calc ukax mä jach’a uñacht’äwiwa
+Name[az]=LibreOffice Calc elektron cədvəl redaktoru
+Name[ba]=LibreOffice Calc электрон таблицаһы мөхәррире
+Name[be]=Таблічны рэдактар LibreOffice Calc
+Name[bg]=LibreOffice Calc редактор на електронни таблици
+Name[bm]=LibreOffice Calc ka jatebɔsɛbɛnw ɲɛnabɔbaga
+Name[bn]=LibreOffice Calc স্প্রেডশীট সম্পাদক
 Name[bo]=ལི་པུ་ལི་ཧྥེ་སི་·ཅ་ལེ་ཁེ་ཡིས་རེའུ་མིག་གི་རྩོམ་སྒྲིག་པ།
-Name[bs]=Libreoffice Calc uređivač tabela
-Name[ca]=Editor de fulls de càlcul de Libreoffice Calc
-Name[co]=Editore di fogli di calcolo Libreoffice Calc
-Name[cs]=Tabulkový editor Libreoffice Calc
-Name[cy]=Golygydd taenlen Libreoffice Calc
-Name[da]=Libreoffice Calc regnearkseditor
+Name[bs]=LibreOffice Calc uređivač tabela
+Name[ca]=Editor de fulls de càlcul de LibreOffice Calc
+Name[co]=Editore di fogli di calcolo LibreOffice Calc
+Name[cs]=Tabulkový editor LibreOffice Calc
+Name[cy]=Golygydd taenlen LibreOffice Calc
+Name[da]=LibreOffice Calc regnearkseditor
 Name[dv]=ރޓަޑިއެ ޓްޝީޑްރެޕްސް ކްލްކެ ސްފީއޮރޭބްލި
-Name[ee]=Libreoffice Calc ƒe agbalẽvi ƒe nuŋlɔla
-Name[el]=Επεξεργαστής υπολογιστικών φύλλων Libreoffice Calc
-Name[eo]=Libreoffice Calc kalkultabelredaktilo
-Name[et]=Libreoffice Calc tabeliredaktor
-Name[eu]=Libreoffice Calc kalkulu-orrien editorea
-Name[fa]=Libreoffice Calc ﻩﺩﺮﺘﺴﮔ ﻪﺤﻔﺻ ﺮﮕﺸﯾﺍﺮﯾﻭ
-Name[fi]=Libreoffice Calc -laskentataulukkoeditori
-Name[fj]=Edita ni spreadsheet ni Libreoffice Calc
-Name[fo]=Libreoffice Calc spreadsheet editor
-Name[fy]=Libreoffice Calc spreadsheet bewurker
-Name[ga]=Eagarthóir scarbhileog Libreoffice Calc
-Name[gd]=Deasaiche spreadsheet Libreoffice Calc
-Name[gl]=Editor de follas de cálculo de Libreoffice Calc
-Name[gn]=Libreoffice Calc kuatiañe’ẽ mohendaha
+Name[ee]=LibreOffice Calc ƒe agbalẽvi ƒe nuŋlɔla
+Name[el]=Επεξεργαστής υπολογιστικών φύλλων LibreOffice Calc
+Name[eo]=LibreOffice Calc kalkultabelredaktilo
+Name[et]=LibreOffice Calc tabeliredaktor
+Name[eu]=LibreOffice Calc kalkulu-orrien editorea
+Name[fa]=LibreOffice Calc ﻩﺩﺮﺘﺴﮔ ﻪﺤﻔﺻ ﺮﮕﺸﯾﺍﺮﯾﻭ
+Name[fi]=LibreOffice Calc -laskentataulukkoeditori
+Name[fj]=Edita ni spreadsheet ni LibreOffice Calc
+Name[fo]=LibreOffice Calc spreadsheet editor
+Name[fy]=LibreOffice Calc spreadsheet bewurker
+Name[ga]=Eagarthóir scarbhileog LibreOffice Calc
+Name[gd]=Deasaiche spreadsheet LibreOffice Calc
+Name[gl]=Editor de follas de cálculo de LibreOffice Calc
+Name[gn]=LibreOffice Calc kuatiañe’ẽ mohendaha
 Name[gu]=લિબરઓફિસ કેલ્ક સ્પ્રેડશીટ એડિટર
-Name[ha]=Libreoffice Calc editan falle
-Name[he]=Libreoffice Calc לש םיינורטקלא תונויליג ךרוע
+Name[ha]=LibreOffice Calc editan falle
+Name[he]=LibreOffice Calc לש םיינורטקלא תונויליג ךרוע
 Name[hi]=लिब्रेऑफ़िस कैल्क स्प्रेडशीट संपादक
-Name[hr]=Libreoffice Calc uređivač proračunskih tablica
-Name[ht]=Libreoffice Calc editè calcul
-Name[hu]=Libreoffice Calc táblázatszerkesztő
-Name[hy]=Libreoffice Calc աղյուսակների խմբագիր
-Name[id]=Editor spreadsheet Libreoffice Calc
-Name[ig]=Libreoffice Calc nchịkọta akụkọ
-Name[is]=Libreoffice Calc töflureikni ritstjóri
-Name[it]=Editor di fogli di calcolo di Libreoffice Calc
-Name[iu]=Libreoffice Calc spreadsheet ᑎᑎᕋᖅᑎ
-Name[ja]=Libreoffice Calc スプレッドシート エディター
-Name[jv]=Editor spreadsheet Libreoffice Calc
-Name[ka]=Libreoffice Calc ცხრილების რედაქტორი
-Name[kk]=Libreoffice Calc электрондық кесте редакторы
-Name[km]=កម្មវិធីនិពន្ធសៀវភៅបញ្ជី Libreoffice Calc
-Name[kn]=Libreoffice Calc ಸ್ಪ್ರೆಡ್u200cಶೀಟ್ ಸಂಪಾದಕ
-Name[ko]=Libreoffice Calc 스프레드시트 편집기
-Name[ku]=Edîtorê pelgeya pelgeya Libreoffice Calc
-Name[ky]=Libreoffice Calc электрондук жадыбал редактору
-Name[la]=Libreoffice Calc spreadsheet editor
-Name[lb]=Libreoffice Calc Spreadsheet Editor
-Name[lg]=Libreoffice Calc omuwandiisi wempapula zebiwandiiko
-Name[ln]=Libreoffice Calc mobongisi ya feuille de calcul
-Name[lo]=ບັນນາທິການຕາຕະລາງ Libreoffice Calc
-Name[lt]=Libreoffice Calc skaičiuoklių rengyklė
-Name[lv]=Libreoffice Calc izklājlapu redaktors
-Name[mg]=Tonian-dahatsoratry ny takelaka Libreoffice Calc
+Name[hr]=LibreOffice Calc uređivač proračunskih tablica
+Name[ht]=LibreOffice Calc editè calcul
+Name[hu]=LibreOffice Calc táblázatszerkesztő
+Name[hy]=LibreOffice Calc աղյուսակների խմբագիր
+Name[id]=Editor spreadsheet LibreOffice Calc
+Name[ig]=LibreOffice Calc nchịkọta akụkọ
+Name[is]=LibreOffice Calc töflureikni ritstjóri
+Name[it]=Editor di fogli di calcolo di LibreOffice Calc
+Name[iu]=LibreOffice Calc spreadsheet ᑎᑎᕋᖅᑎ
+Name[ja]=LibreOffice Calc スプレッドシート エディター
+Name[jv]=Editor spreadsheet LibreOffice Calc
+Name[ka]=LibreOffice Calc ცხრილების რედაქტორი
+Name[kk]=LibreOffice Calc электрондық кесте редакторы
+Name[km]=កម្មវិធីនិពន្ធសៀវភៅបញ្ជី LibreOffice Calc
+Name[kn]=LibreOffice Calc ಸ್ಪ್ರೆಡ್u200cಶೀಟ್ ಸಂಪಾದಕ
+Name[ko]=LibreOffice Calc 스프레드시트 편집기
+Name[ku]=Edîtorê pelgeya pelgeya LibreOffice Calc
+Name[ky]=LibreOffice Calc электрондук жадыбал редактору
+Name[la]=LibreOffice Calc spreadsheet editor
+Name[lb]=LibreOffice Calc Spreadsheet Editor
+Name[lg]=LibreOffice Calc omuwandiisi wempapula zebiwandiiko
+Name[ln]=LibreOffice Calc mobongisi ya feuille de calcul
+Name[lo]=ບັນນາທິການຕາຕະລາງ LibreOffice Calc
+Name[lt]=LibreOffice Calc skaičiuoklių rengyklė
+Name[lv]=LibreOffice Calc izklājlapu redaktors
+Name[mg]=Tonian-dahatsoratry ny takelaka LibreOffice Calc
 Name[mi]=Freeoffice Calc ētita ripanga
-Name[mk]=Уредувач на табеларни пресметки Libreoffice Calc
-Name[ml]=Libreoffice Calc സ്u200cപ്രെഡ്u200cഷീറ്റ് എഡിറ്റർ
-Name[mn]=Libreoffice Calc хүснэгт засварлагч
+Name[mk]=Уредувач на табеларни пресметки LibreOffice Calc
+Name[ml]=LibreOffice Calc സ്u200cപ്രെഡ്u200cഷീറ്റ് എഡിറ്റർ
+Name[mn]=LibreOffice Calc хүснэгт засварлагч
 Name[mr]=लिबरऑफिस कॅल्क स्प्रेडशीट संपादक
-Name[ms]=Editor hamparan Calc Libreoffice
-Name[mt]=Editur tal-ispreadsheet ta Libreoffice Calc
-Name[my]=Libreoffice Calc စာရင်းဇယားတည်းဖြတ်သူ
-Name[ne]=Libreoffice Calc स्प्रेडसिट सम्पादक
-Name[nl]=Libreoffice Calc-spreadsheet-editor
-Name[no]=Libreoffice Calc regnearkredigerer
-Name[ny]=Libreoffice Calc spreadsheet editor
-Name[om]=Gulaalaa gabatee Libreoffice Calc
+Name[ms]=Editor hamparan Calc LibreOffice
+Name[mt]=Editur tal-ispreadsheet ta LibreOffice Calc
+Name[my]=LibreOffice Calc စာရင်းဇယားတည်းဖြတ်သူ
+Name[ne]=LibreOffice Calc स्प्रेडसिट सम्पादक
+Name[nl]=LibreOffice Calc-spreadsheet-editor
+Name[no]=LibreOffice Calc regnearkredigerer
+Name[ny]=LibreOffice Calc spreadsheet editor
+Name[om]=Gulaalaa gabatee LibreOffice Calc
 Name[or]=ଲିବ୍ରେଫିସ୍ କାଲ୍ ସ୍ପ୍ରେଡସିଟ୍ ଏଡିଟର୍ |
 Name[pa]=ਲਿਬਰੇਆਫਿਸ ਕੈਲਕ ਸਪ੍ਰੈਡਸ਼ੀਟ ਸੰਪਾਦਕ
-Name[pl]=Edytor arkuszy kalkulacyjnych Libreoffice Calc
+Name[pl]=Edytor arkuszy kalkulacyjnych LibreOffice Calc
 Name[ps]=ﺮټﯾډﯾﺍ ټﯿﺷ ډﯾﺮﭙﺳ ﮏﻟﺎﮐ ﺲﻓﺁ ﺮﺒﯿﻟ ﺩ
-Name[pt]=Editor de planilhas Libreoffice Calc
-Name[qu]=Libreoffice Calc yupay raphi allichaq
-Name[ro]=Editor de foi de calcul Libreoffice Calc
-Name[ru]=Libreoffice Calc Редактор электронных таблиц
-Name[rw]=Libreoffice Kubara urupapuro rwabanditsi
-Name[sa]=Libreoffice Calc स्प्रेडशीट् सम्पादकः
-Name[sd]=Libreoffice Calc ﺮٽﻳڊﻳﺍ ٽﻴﺷ ڊﻳﺮﭙﺳﺍ
-Name[si]=Libreoffice Calc පැතුරුම්පත් සංස්කාරකය
-Name[sk]=Tabuľkový editor Libreoffice Calc
-Name[sl]=Urejevalnik preglednic Libreoffice Calc
+Name[pt]=Editor de planilhas LibreOffice Calc
+Name[qu]=LibreOffice Calc yupay raphi allichaq
+Name[ro]=Editor de foi de calcul LibreOffice Calc
+Name[ru]=LibreOffice Calc Редактор электронных таблиц
+Name[rw]=LibreOffice Kubara urupapuro rwabanditsi
+Name[sa]=LibreOffice Calc स्प्रेडशीट् सम्पादकः
+Name[sd]=LibreOffice Calc ﺮٽﻳڊﻳﺍ ٽﻴﺷ ڊﻳﺮﭙﺳﺍ
+Name[si]=LibreOffice Calc පැතුරුම්පත් සංස්කාරකය
+Name[sk]=Tabuľkový editor LibreOffice Calc
+Name[sl]=Urejevalnik preglednic LibreOffice Calc
 Name[sm]=Freeoffice Calc faatonu pepa faasalalau
-Name[sn]=Libreoffice Calc spreadsheet mupepeti
-Name[so]=Libreoffice Calc tifaftiraha xaashida
-Name[sq]=Redaktori i fletëllogaritjes Libreoffice Calc
-Name[st]=Libreoffice Calc spreadsheet editor
-Name[su]=Éditor spreadsheet Libreoffice Calc
-Name[sv]=Libreoffice Calc kalkylbladsredigerare
-Name[sw]=Mhariri wa lahajedwali wa Libreoffice Calc
-Name[ta]=Libreoffice Calc விரிதாள் எடிட்டர்
-Name[te]=Libreoffice Calc స్ప్రెడ్u200cషీట్ ఎడిటర్
-Name[tg]=Муҳаррири ҷадвали электронии Libreoffice Calc
-Name[th]=โปรแกรมแก้ไขสเปรดชีต Libreoffice Calc
+Name[sn]=LibreOffice Calc spreadsheet mupepeti
+Name[so]=LibreOffice Calc tifaftiraha xaashida
+Name[sq]=Redaktori i fletëllogaritjes LibreOffice Calc
+Name[st]=LibreOffice Calc spreadsheet editor
+Name[su]=Éditor spreadsheet LibreOffice Calc
+Name[sv]=LibreOffice Calc kalkylbladsredigerare
+Name[sw]=Mhariri wa lahajedwali wa LibreOffice Calc
+Name[ta]=LibreOffice Calc விரிதாள் எடிட்டர்
+Name[te]=LibreOffice Calc స్ప్రెడ్u200cషీట్ ఎడిటర్
+Name[tg]=Муҳаррири ҷадвали электронии LibreOffice Calc
+Name[th]=โปรแกรมแก้ไขสเปรดชีต LibreOffice Calc
 Name[ti]=ሊብሬኦፊስ ካልክ ስፕረድሺት ኤዲተር
-Name[tk]=Libreoffice Calc elektron tablisasynyň redaktory
-Name[tl]=Libreoffice Calc spreadsheet editor
-Name[to]=Libreoffice Calc ʻetita spreadsheet
-Name[tr]=Libreoffice Calc hesap tablosu düzenleyicisi
-Name[ts]=Muhleri wa xiphephana xa xiphephana xa Libreoffice Calc
-Name[tt]=Libreoffice Calc электрон таблицасы редакторы
-Name[tw]=Libreoffice Calc nkyerɛwde krataa samufo
-Name[ty]=Libreoffice Calc editor
-Name[ug]=Libreoffice Calc ﻰﭼﯜﮕﯩﻟﺮﯨﺮﮬەﺗ ﻝەﯞﺩەﺟ ﻕﯘﻠﻧﻭﺮﺘﻜﯧﻠﯧﺋ
-Name[uk]=Редактор електронних таблиць Libreoffice Calc
-Name[ur]=Libreoffice Calc ﺮﭩﯾﮉﯾﺍ ﭧﯿﺷﮉﯾﺮﭙﺳﺍ
-Name[uz]=Libreoffice Calc elektron jadval muharriri
-Name[vi]=Trình chỉnh sửa bảng tính Libreoffice Calc
-Name[xh]=Libreoffice Calc spreadsheet umhleli
-Name[yi]=Libreoffice Calc ראָטקאַדער טישדערפּס
-Name[yo]=Libreoffice Calc olootu iwe kaunti
-Name[zh]=Libreoffice Calc 电子表格编辑器
-Name[zu]=Umhleli wespredishithi we-Libreoffice Calc
-Name=Libreoffice Calc spreadsheet editor
+Name[tk]=LibreOffice Calc elektron tablisasynyň redaktory
+Name[tl]=LibreOffice Calc spreadsheet editor
+Name[to]=LibreOffice Calc ʻetita spreadsheet
+Name[tr]=LibreOffice Calc hesap tablosu düzenleyicisi
+Name[ts]=Muhleri wa xiphephana xa xiphephana xa LibreOffice Calc
+Name[tt]=LibreOffice Calc электрон таблицасы редакторы
+Name[tw]=LibreOffice Calc nkyerɛwde krataa samufo
+Name[ty]=LibreOffice Calc editor
+Name[ug]=LibreOffice Calc ﻰﭼﯜﮕﯩﻟﺮﯨﺮﮬەﺗ ﻝەﯞﺩەﺟ ﻕﯘﻠﻧﻭﺮﺘﻜﯧﻠﯧﺋ
+Name[uk]=Редактор електронних таблиць LibreOffice Calc
+Name[ur]=LibreOffice Calc ﺮﭩﯾﮉﯾﺍ ﭧﯿﺷﮉﯾﺮﭙﺳﺍ
+Name[uz]=LibreOffice Calc elektron jadval muharriri
+Name[vi]=Trình chỉnh sửa bảng tính LibreOffice Calc
+Name[xh]=LibreOffice Calc spreadsheet umhleli
+Name[yi]=LibreOffice Calc ראָטקאַדער טישדערפּס
+Name[yo]=LibreOffice Calc olootu iwe kaunti
+Name[zh]=LibreOffice Calc 电子表格编辑器
+Name[zu]=Umhleli wespredishithi we-LibreOffice Calc
+Name=LibreOffice Calc spreadsheet editor
 Icon=libreoffice-calc.png
 Comment[de]=Calc-Tabellenkalkulationseditor
-Comment[es]=Libreoffice Calc: hoja de cálculo
+Comment[es]=LibreOffice Calc: hoja de cálculo
 Comment[af]=Calc sigbladredigeerder
 Comment[am]=ካልክ የተመን ሉህ አርታዒ
 Comment[ar]=ﺕﺎﻧﺎﻴﺒﻟﺍ ﻝﻭﺍﺪﺟ ﺭﺮﺤﻣ ﺐﺴﺣﺍ
