--- a/buildquantumvis/rootfs/rootfs-skeleton/usr/share/applications.in/sdraw.desktop
+++ b/buildquantumvis/rootfs/rootfs-skeleton/usr/share/applications.in/sdraw.desktop
@@ -1,134 +1,134 @@
 [Desktop Entry]
 Encoding=UTF-8
-Name[de]=Libreoffice Draw Vektoreditor
-Name[fr]=Éditeur dessins/images : Libreoffice Draw
-Name[es]=Libreoffice Draw: editor vectorial
-Name[af]=Libreoffice Draw vektorredigeerder
-Name[am]=Libreoffice የቬክተር አርታዒ ይሳሉ
-Name[ar]=Libreoffice Draw ﺕﺎﻬﺠﺘﻤﻟﺍ ﺭﺮﺤﻣ
-Name[as]=Libreoffice ভেক্টৰ সম্পাদক আঁকক
-Name[ay]=Libreoffice Uñacht’ayaña vector editor
-Name[az]=Libreoffice Draw vektor redaktoru
-Name[ba]=Libreoffice Draw векторы мөхәррире
-Name[be]=Вектарны рэдактар Libreoffice Draw
-Name[bg]=Векторен редактор Libreoffice Draw
-Name[bm]=Libreoffice Ja min bɛ wele ko vecteur editeur
-Name[bn]=Libreoffice ড্র ভেক্টর সম্পাদক
+Name[de]=LibreOffice Draw Vektoreditor
+Name[fr]=Éditeur dessins/images : LibreOffice Draw
+Name[es]=LibreOffice Draw: editor vectorial
+Name[af]=LibreOffice Draw vektorredigeerder
+Name[am]=LibreOffice የቬክተር አርታዒ ይሳሉ
+Name[ar]=LibreOffice Draw ﺕﺎﻬﺠﺘﻤﻟﺍ ﺭﺮﺤﻣ
+Name[as]=LibreOffice ভেক্টৰ সম্পাদক আঁকক
+Name[ay]=LibreOffice Uñacht’ayaña vector editor
+Name[az]=LibreOffice Draw vektor redaktoru
+Name[ba]=LibreOffice Draw векторы мөхәррире
+Name[be]=Вектарны рэдактар LibreOffice Draw
+Name[bg]=Векторен редактор LibreOffice Draw
+Name[bm]=LibreOffice Ja min bɛ wele ko vecteur editeur
+Name[bn]=LibreOffice ড্র ভেক্টর সম্পাদক
 Name[bo]=ལི་པུ་ལི་ཧྥེ་སི་རི་མོ་འབྲི་བའི་ཕྱོགས་སྟོན་རྩོམ་སྒྲིག་པ།
-Name[bs]=Libreoffice Draw vektorski uređivač
-Name[ca]=Editor de vectors de Libreoffice Draw
-Name[co]=Editor di vettori di Libreoffice Draw
-Name[cs]=Vektorový editor Libreoffice Draw
-Name[cy]=Golygydd fector Libreoffice Draw
-Name[da]=Libreoffice Draw vektor editor
+Name[bs]=LibreOffice Draw vektorski uređivač
+Name[ca]=Editor de vectors de LibreOffice Draw
+Name[co]=Editor di vettori di LibreOffice Draw
+Name[cs]=Vektorový editor LibreOffice Draw
+Name[cy]=Golygydd fector LibreOffice Draw
+Name[da]=LibreOffice Draw vektor editor
 Name[dv]=ރޓަޑިއެ ރޓަކްވެ ރޯޑް ސްފީއޮރޭބްލި
-Name[ee]=Libreoffice Ta vektor nuŋlɔla
-Name[el]=Διανυσματικό πρόγραμμα επεξεργασίας Libreoffice Draw
-Name[eo]=Libreoffice Draw-vektorredaktilo
-Name[et]=Libreoffice Draw vektorredaktor
-Name[eu]=Libreoffice Draw bektorial editorea
-Name[fa]=Libreoffice Draw ﯼﺭﺍﺩﺮﺑ ﺮﮕﺸﯾﺍﺮﯾﻭ
-Name[fi]=Libreoffice Draw -vektorieditori
-Name[fj]=Libreoffice Edita ni Droini
-Name[fo]=Libreoffice Draw vector editor
-Name[fy]=Libreoffice Draw vector editor
-Name[ga]=Eagarthóir veicteoir líníocht Libreoffice
-Name[gd]=Dealbh neach-deasachaidh Libreoffice
-Name[gl]=Editor de vectores de Libreoffice Draw
-Name[gn]=Libreoffice Edibuja editor vectorial rehegua
+Name[ee]=LibreOffice Ta vektor nuŋlɔla
+Name[el]=Διανυσματικό πρόγραμμα επεξεργασίας LibreOffice Draw
+Name[eo]=LibreOffice Draw-vektorredaktilo
+Name[et]=LibreOffice Draw vektorredaktor
+Name[eu]=LibreOffice Draw bektorial editorea
+Name[fa]=LibreOffice Draw ﯼﺭﺍﺩﺮﺑ ﺮﮕﺸﯾﺍﺮﯾﻭ
+Name[fi]=LibreOffice Draw -vektorieditori
+Name[fj]=LibreOffice Edita ni Droini
+Name[fo]=LibreOffice Draw vector editor
+Name[fy]=LibreOffice Draw vector editor
+Name[ga]=Eagarthóir veicteoir líníocht LibreOffice
+Name[gd]=Dealbh neach-deasachaidh LibreOffice
+Name[gl]=Editor de vectores de LibreOffice Draw
+Name[gn]=LibreOffice Edibuja editor vectorial rehegua
 Name[gu]=લિબરઓફિસ ડ્રો વેક્ટર એડિટર
-Name[ha]=Libreoffice Zana vector editan
-Name[he]=Libreoffice Draw ךרוע רוטקו
+Name[ha]=LibreOffice Zana vector editan
+Name[he]=LibreOffice Draw ךרוע רוטקו
 Name[hi]=लिब्रेऑफ़िस ड्रा वेक्टर संपादक
-Name[hr]=Libreoffice Draw vektorski uređivač
-Name[ht]=Editè vektè Libreoffice Draw
-Name[hu]=Libreoffice Draw vektorszerkesztő
-Name[hy]=Libreoffice Draw վեկտորի խմբագիր
-Name[id]=Editor vektor Gambar Libreoffice
-Name[ig]=Libreoffice Dọrọ onye nchịkọta akụkọ vector
-Name[is]=Libreoffice Draw vektor ritstjóri
+Name[hr]=LibreOffice Draw vektorski uređivač
+Name[ht]=Editè vektè LibreOffice Draw
+Name[hu]=LibreOffice Draw vektorszerkesztő
+Name[hy]=LibreOffice Draw վեկտորի խմբագիր
+Name[id]=Editor vektor Gambar LibreOffice
+Name[ig]=LibreOffice Dọrọ onye nchịkọta akụkọ vector
+Name[is]=LibreOffice Draw vektor ritstjóri
 Name[it]=Editor di vettori LibreOffice Draw
-Name[iu]=Libreoffice Draw vector−ᒧᑦ ᐋᖅᑭᒃᓱᐃᔨ
-Name[ja]=Libreoffice Draw ベクター エディター
+Name[iu]=LibreOffice Draw vector−ᒧᑦ ᐋᖅᑭᒃᓱᐃᔨ
+Name[ja]=LibreOffice Draw ベクター エディター
 Name[jv]=Editor vektor Gambar LibreOffice
-Name[ka]=Libreoffice Draw ვექტორული რედაქტორი
-Name[kk]=Libreoffice Draw векторлық редакторы
-Name[km]=កម្មវិធីនិពន្ធវ៉ិចទ័រ Libreoffice Draw
-Name[kn]=Libreoffice ಡ್ರಾ ವೆಕ್ಟರ್ ಸಂಪಾದಕ
-Name[ko]=Libreoffice 그리기 벡터 편집기
-Name[ku]=Edîtorê vektorê Libreoffice Draw
-Name[ky]=Libreoffice Draw вектордук редактору
-Name[la]=Libreoffice Contrahe vector editor
-Name[lb]=Libreoffice Draw Vector Editor
-Name[lg]=Libreoffice Kuba ekifaananyi kyomuwandiisi wa vector
-Name[ln]=Libreoffice Kosala mobongisi ya vecteur
-Name[lo]=Libreoffice ແຕ້ມ vector editor
-Name[lt]=Libreoffice Draw vektorinis redaktorius
-Name[lv]=Libreoffice Draw vektoru redaktors
-Name[mg]=Libreoffice Draw vector editor
+Name[ka]=LibreOffice Draw ვექტორული რედაქტორი
+Name[kk]=LibreOffice Draw векторлық редакторы
+Name[km]=កម្មវិធីនិពន្ធវ៉ិចទ័រ LibreOffice Draw
+Name[kn]=LibreOffice ಡ್ರಾ ವೆಕ್ಟರ್ ಸಂಪಾದಕ
+Name[ko]=LibreOffice 그리기 벡터 편집기
+Name[ku]=Edîtorê vektorê LibreOffice Draw
+Name[ky]=LibreOffice Draw вектордук редактору
+Name[la]=LibreOffice Contrahe vector editor
+Name[lb]=LibreOffice Draw Vector Editor
+Name[lg]=LibreOffice Kuba ekifaananyi kyomuwandiisi wa vector
+Name[ln]=LibreOffice Kosala mobongisi ya vecteur
+Name[lo]=LibreOffice ແຕ້ມ vector editor
+Name[lt]=LibreOffice Draw vektorinis redaktorius
+Name[lv]=LibreOffice Draw vektoru redaktors
+Name[mg]=LibreOffice Draw vector editor
 Name[mi]=Freeoffice Draw ētita vector
-Name[mk]=Векторски уредник на Libreoffice Draw
-Name[ml]=Libreoffice ഡ്രോ വെക്റ്റർ എഡിറ്റർ
-Name[mn]=Libreoffice Draw вектор засварлагч
+Name[mk]=Векторски уредник на LibreOffice Draw
+Name[ml]=LibreOffice ഡ്രോ വെക്റ്റർ എഡിറ്റർ
+Name[mn]=LibreOffice Draw вектор засварлагч
 Name[mr]=लिबरऑफिस ड्रॉ वेक्टर संपादक
-Name[ms]=Editor vektor Draw Libreoffice
-Name[mt]=Libreoffice Iġbed editur tal-vettur
-Name[my]=Libreoffice Draw vector တည်းဖြတ်သူ
-Name[ne]=Libreoffice ड्र वेक्टर सम्पादक
-Name[nl]=Libreoffice Draw vector-editor
-Name[no]=Libreoffice Draw vektor editor
-Name[ny]=Libreoffice Draw vekitala mkonzi
-Name[om]=Libreoffice Gulaalaa veektarii kaasi
+Name[ms]=Editor vektor Draw LibreOffice
+Name[mt]=LibreOffice Iġbed editur tal-vettur
+Name[my]=LibreOffice Draw vector တည်းဖြတ်သူ
+Name[ne]=LibreOffice ड्र वेक्टर सम्पादक
+Name[nl]=LibreOffice Draw vector-editor
+Name[no]=LibreOffice Draw vektor editor
+Name[ny]=LibreOffice Draw vekitala mkonzi
+Name[om]=LibreOffice Gulaalaa veektarii kaasi
 Name[or]=ଲିବ୍ରେଫାଇସ୍ ଡ୍ର ଭେକ୍ଟର ଏଡିଟର୍ |
 Name[pa]=ਲਿਬਰੇਆਫਿਸ ਡਰਾਅ ਵੈਕਟਰ ਸੰਪਾਦਕ
-Name[pl]=Edytor wektorów Libreoffice Draw
+Name[pl]=Edytor wektorów LibreOffice Draw
 Name[ps]=ﺮﯾﺪﻣ ﺭﻮﺘﮑﯾﻭ ﺍﺭډ ﺲﻓﺁ ﺮﺒﯿﻟ ﺩ
-Name[pt]=Editor vetorial Libreoffice Draw
-Name[qu]=Libreoffice Siqi vector editor
-Name[ro]=Editor de vectori Libreoffice Draw
-Name[ru]=Libreoffice Draw Векторный редактор
-Name[rw]=Libreoffice Shushanya umwanditsi mukuru
-Name[sa]=Libreoffice सदिश सम्पादक आकर्षित करें
+Name[pt]=Editor vetorial LibreOffice Draw
+Name[qu]=LibreOffice Siqi vector editor
+Name[ro]=Editor de vectori LibreOffice Draw
+Name[ru]=LibreOffice Draw Векторный редактор
+Name[rw]=LibreOffice Shushanya umwanditsi mukuru
+Name[sa]=LibreOffice सदिश सम्पादक आकर्षित करें
 Name[sd]=ﺮٽﻳڊﻳﺍ ﺮﭩﮑﯾﻭ ﺍﺭڊ ﺲﻴﻓﺁ ﺮﺒﻴﻟ
-Name[si]=Libreoffice Draw vector editor
-Name[sk]=vektorový editor Libreoffice Draw
-Name[sl]=Vektorski urejevalnik Libreoffice Draw
+Name[si]=LibreOffice Draw vector editor
+Name[sk]=vektorový editor LibreOffice Draw
+Name[sl]=Vektorski urejevalnik LibreOffice Draw
 Name[sm]=Freeoffice Draw vector editor
-Name[sn]=Libreoffice Dhirowa vector mupepeti
-Name[so]=Libreoffice Sawir sawir tifaftiraha
-Name[sq]=Redaktori i vektorit të Libreoffice Draw
-Name[st]=Libreoffice Draw vector editor
-Name[su]=Editor vektor Libreoffice Draw
-Name[sv]=Libreoffice Draw vektorredigerare
-Name[sw]=Libreoffice Chora kihariri cha vekta
-Name[ta]=Libreoffice டிரா வெக்டர் எடிட்டர்
+Name[sn]=LibreOffice Dhirowa vector mupepeti
+Name[so]=LibreOffice Sawir sawir tifaftiraha
+Name[sq]=Redaktori i vektorit të LibreOffice Draw
+Name[st]=LibreOffice Draw vector editor
+Name[su]=Editor vektor LibreOffice Draw
+Name[sv]=LibreOffice Draw vektorredigerare
+Name[sw]=LibreOffice Chora kihariri cha vekta
+Name[ta]=LibreOffice டிரா வெக்டர் எடிட்டர்
 Name[te]=లిబ్రేఆఫీస్ డ్రా వెక్టర్ ఎడిటర్
-Name[tg]=Муҳаррири вектории Libreoffice Draw
-Name[th]=โปรแกรมแก้ไขเวกเตอร์ Libreoffice Draw
-Name[ti]=Libreoffice ስእሊ ቬክተር ኣርታዒ
-Name[tk]=“Libreoffice Draw” wektor redaktory
-Name[tl]=Libreoffice Draw vector editor
-Name[to]=Libreoffice ta vector ʻetita
-Name[tr]=Libreoffice Draw vektör düzenleyici
-Name[ts]=Libreoffice Dirowa muhleri wa vector
-Name[tt]=Libreoffice сызу вектор редакторы
-Name[tw]=Libreoffice Twe vector editor a ɛyɛ fɛ
-Name[ty]=Libreoffice Draw vector editor
-Name[ug]=Libreoffice ﻯﺮﯨﺮﮬەﺗ ﺭﻮﺘﻜﯦﯞ ﺶﯨﺰﯩﺳ
-Name[uk]=Векторний редактор Libreoffice Draw
+Name[tg]=Муҳаррири вектории LibreOffice Draw
+Name[th]=โปรแกรมแก้ไขเวกเตอร์ LibreOffice Draw
+Name[ti]=LibreOffice ስእሊ ቬክተር ኣርታዒ
+Name[tk]=“LibreOffice Draw” wektor redaktory
+Name[tl]=LibreOffice Draw vector editor
+Name[to]=LibreOffice ta vector ʻetita
+Name[tr]=LibreOffice Draw vektör düzenleyici
+Name[ts]=LibreOffice Dirowa muhleri wa vector
+Name[tt]=LibreOffice сызу вектор редакторы
+Name[tw]=LibreOffice Twe vector editor a ɛyɛ fɛ
+Name[ty]=LibreOffice Draw vector editor
+Name[ug]=LibreOffice ﻯﺮﯨﺮﮬەﺗ ﺭﻮﺘﻜﯦﯞ ﺶﯨﺰﯩﺳ
+Name[uk]=Векторний редактор LibreOffice Draw
 Name[ur]=ﺮﭩﯾﮉﯾﺍ ﺮﭩﮑﯾﻭ ﺍﺭﮈ ﺲﻓﺁ ﺮﺒﺋﻻ﻿
-Name[uz]=Libreoffice Draw vektor muharriri
-Name[vi]=Trình chỉnh sửa vector Libreoffice Draw
-Name[xh]=Libreoffice Zoba umhleli wevektha
-Name[yi]=Libreoffice Draw ראָטקאַדער ראָטקעוו
-Name[yo]=Libreoffice Fa fekito olootu
-Name[zh]=Libreoffice Draw 矢量编辑器
-Name[zu]=Libreoffice Dweba umhleli we-vector
-Name=Libreoffice Draw vector editor
+Name[uz]=LibreOffice Draw vektor muharriri
+Name[vi]=Trình chỉnh sửa vector LibreOffice Draw
+Name[xh]=LibreOffice Zoba umhleli wevektha
+Name[yi]=LibreOffice Draw ראָטקאַדער ראָטקעוו
+Name[yo]=LibreOffice Fa fekito olootu
+Name[zh]=LibreOffice Draw 矢量编辑器
+Name[zu]=LibreOffice Dweba umhleli we-vector
+Name=LibreOffice Draw vector editor
 Icon=libreoffice-draw.png
 Comment[de]=Vektor-Editor zeichnen
 Comment[fr]=Draw Éditeur vectoriel
-Comment[es]=Libreoffice Draw: editor vectorial
+Comment[es]=LibreOffice Draw: editor vectorial
 Comment[af]=Teken vektorredigeerder
 Comment[am]=የቬክተር አርታዒን ይሳሉ
 Comment[ar]=ﻪﺠﺘﻣ ﺭﺮﺤﻣ ﻢﺳﺭ
