--- a/buildquantumvis/rootfs/rootfs-skeleton/usr/share/applications.in/simpress.desktop
+++ b/buildquantumvis/rootfs/rootfs-skeleton/usr/share/applications.in/simpress.desktop
@@ -1,133 +1,133 @@
 [Desktop Entry]
 Encoding=UTF-8
-Name[de]=Libreoffice Impress Präsentationen
-Name[fr]=Présentations : Libreoffice Impress
-Name[es]=Libreoffice Impress: presentaciones
-Name[af]=Libreoffice Impress-aanbiedings
-Name[am]=Libreoffice Impress አቀራረቦች
-Name[ar]=Libreoffice Impress ـﻟ ﺔﻴﻤﻳﺪﻘﺘﻟﺍ ﺽﻭﺮﻌﻟﺍ
+Name[de]=LibreOffice Impress Präsentationen
+Name[fr]=Présentations : LibreOffice Impress
+Name[es]=LibreOffice Impress: presentaciones
+Name[af]=LibreOffice Impress-aanbiedings
+Name[am]=LibreOffice Impress አቀራረቦች
+Name[ar]=LibreOffice Impress ـﻟ ﺔﻴﻤﻳﺪﻘﺘﻟﺍ ﺽﻭﺮﻌﻟﺍ
 Name[as]=লিবাৰঅফিচ ইম্প্ৰেছ উপস্থাপনসমূহ
-Name[ay]=Libreoffice Uñacht’awinakax wali muspharkañawa
-Name[az]=Libreoffice Impress təqdimatları
-Name[ba]=Libreoffice Ref-ref-refere презентациялары
+Name[ay]=LibreOffice Uñacht’awinakax wali muspharkañawa
+Name[az]=LibreOffice Impress təqdimatları
+Name[ba]=LibreOffice Ref-ref-refere презентациялары
 Name[be]=Прэзентацыі libreoffice impress
-Name[bg]=Презентации на Libreoffice Impress
-Name[bm]=Libreoffice Ɲɛjirali minnu bɛ mɔgɔ kabakoya
-Name[bn]=Libreoffice ইমপ্রেস উপস্থাপনা
+Name[bg]=Презентации на LibreOffice Impress
+Name[bm]=LibreOffice Ɲɛjirali minnu bɛ mɔgɔ kabakoya
+Name[bn]=LibreOffice ইমপ্রেস উপস্থাপনা
 Name[bo]=ལི་པུ་ལི་ཧྥེ་སི་ཡིས་མི་རྣམས་ལ་བག་ཆགས་ཟབ་མོ་
-Name[bs]=Libreoffice Impress prezentacije
-Name[ca]=Presentacions de Libreoffice Impress
-Name[co]=Presentazioni di Libreoffice Impress
-Name[cs]=Prezentace Libreoffice Impress
-Name[cy]=Cyflwyniadau Libreoffice Impress
-Name[da]=Libreoffice Impress præsentationer
+Name[bs]=LibreOffice Impress prezentacije
+Name[ca]=Presentacions de LibreOffice Impress
+Name[co]=Presentazioni di LibreOffice Impress
+Name[cs]=Prezentace LibreOffice Impress
+Name[cy]=Cyflwyniadau LibreOffice Impress
+Name[da]=LibreOffice Impress præsentationer
 Name[dv]=ސްންޝަޓޭންޒެރެޕް ސްރެޕްމްއި ސްފީއޮރޭބްލި
-Name[ee]=Libreoffice Nukpɔkpɔ siwo wɔa dɔ ɖe ame dzi
-Name[el]=Παρουσιάσεις Libreoffice Impress
-Name[eo]=Prezentaĵoj de Libreoffice Impress
-Name[et]=Libreoffice Impressi esitlused
-Name[eu]=Libreoffice Impress aurkezpenak
-Name[fa]=Libreoffice Impress ﯼﺎﻫ ﻪﺋﺍﺭﺍ
-Name[fi]=Libreoffice Impress -esityksiä
-Name[fj]=Libreoffice Impress presentations
-Name[fo]=Libreoffice Impress framløgus
-Name[fy]=Libreoffice Impress presintaasjes
+Name[ee]=LibreOffice Nukpɔkpɔ siwo wɔa dɔ ɖe ame dzi
+Name[el]=Παρουσιάσεις LibreOffice Impress
+Name[eo]=Prezentaĵoj de LibreOffice Impress
+Name[et]=LibreOffice Impressi esitlused
+Name[eu]=LibreOffice Impress aurkezpenak
+Name[fa]=LibreOffice Impress ﯼﺎﻫ ﻪﺋﺍﺭﺍ
+Name[fi]=LibreOffice Impress -esityksiä
+Name[fj]=LibreOffice Impress presentations
+Name[fo]=LibreOffice Impress framløgus
+Name[fy]=LibreOffice Impress presintaasjes
 Name[ga]=Cur i láthair ar libreoffice impress saor in aisce,
-Name[gd]=Libreoffice impress taisbeanaidhean a
-Name[gl]=Presentacións de Libreoffice Impress
-Name[gn]=Libreoffice Oimpresiona umi presentación
+Name[gd]=LibreOffice impress taisbeanaidhean a
+Name[gl]=Presentacións de LibreOffice Impress
+Name[gn]=LibreOffice Oimpresiona umi presentación
 Name[gu]=લિબરઓફિસ પ્રભાવિત પ્રસ્તુતિઓ
-Name[ha]=Libreoffice Impress gabatarwa
-Name[he]=Libreoffice Impress לש תוגצמ
+Name[ha]=LibreOffice Impress gabatarwa
+Name[he]=LibreOffice Impress לש תוגצמ
 Name[hi]=लिब्रेऑफ़िस प्रस्तुतियों को प्रभावित करता है
-Name[hr]=Libreoffice Impress prezentacije
-Name[ht]=Prezantasyon Libreoffice Impress
-Name[hu]=Libreoffice Impress prezentációk
-Name[hy]=Libreoffice Impress շնորհանդեսներ
-Name[id]=Presentasi Libreoffice Impress
-Name[ig]=Ihe ngosi Libreoffice Impress
-Name[is]=Libreoffice Impress kynningar
+Name[hr]=LibreOffice Impress prezentacije
+Name[ht]=Prezantasyon LibreOffice Impress
+Name[hu]=LibreOffice Impress prezentációk
+Name[hy]=LibreOffice Impress շնորհանդեսներ
+Name[id]=Presentasi LibreOffice Impress
+Name[ig]=Ihe ngosi LibreOffice Impress
+Name[is]=LibreOffice Impress kynningar
 Name[it]=Presentazioni LibreOffice Impress
-Name[iu]=Libreoffice Impress-ᒧᑦ ᐅᓂᒃᑲᐅᓯᐅᔪᑦ
-Name[ja]=Libreoffice Impress プレゼンテーション
-Name[jv]=Presentasi Libreoffice Impress
-Name[ka]=Libreoffice Impress პრეზენტაციები
-Name[kk]=Libreoffice Impress презентациялары
-Name[km]=ការបង្ហាញ Libreoffice Impress
-Name[kn]=Libreoffice ಪ್ರಸ್ತುತಿಗಳನ್ನು ಇಂಪ್ರೆಸ್ ಮಾಡಿ
+Name[iu]=LibreOffice Impress-ᒧᑦ ᐅᓂᒃᑲᐅᓯᐅᔪᑦ
+Name[ja]=LibreOffice Impress プレゼンテーション
+Name[jv]=Presentasi LibreOffice Impress
+Name[ka]=LibreOffice Impress პრეზენტაციები
+Name[kk]=LibreOffice Impress презентациялары
+Name[km]=ការបង្ហាញ LibreOffice Impress
+Name[kn]=LibreOffice ಪ್ರಸ್ತುತಿಗಳನ್ನು ಇಂಪ್ರೆಸ್ ಮಾಡಿ
 Name[ko]=리브레오피스 임프레스 프레젠테이션
-Name[ku]=Pêşniyarên Libreoffice Impress
-Name[ky]=Libreoffice Impress презентациялары
-Name[la]=Impressum Libreoffice presentations
-Name[lb]=Libreoffice Impress Presentatiounen
-Name[lg]=Libreoffice Ennyanjula ezisikiriza
-Name[ln]=Libreoffice Ba présentations ya impression
-Name[lo]=ການນໍາສະເຫນີ Libreoffice ປະທັບໃຈ
-Name[lt]=Libreoffice Impress pristatymai
-Name[lv]=Libreoffice Impress prezentācijas
-Name[mg]=Fampisehoana Libreoffice Impress
-Name[mi]=Nga whakaaturanga Libreoffice Impress
-Name[mk]=Презентации на Libreoffice Impress
-Name[ml]=Libreoffice ഇംപ്രസ് അവതരണങ്ങൾ
-Name[mn]=Libreoffice Impress танилцуулга
+Name[ku]=Pêşniyarên LibreOffice Impress
+Name[ky]=LibreOffice Impress презентациялары
+Name[la]=Impressum LibreOffice presentations
+Name[lb]=LibreOffice Impress Presentatiounen
+Name[lg]=LibreOffice Ennyanjula ezisikiriza
+Name[ln]=LibreOffice Ba présentations ya impression
+Name[lo]=ການນໍາສະເຫນີ LibreOffice ປະທັບໃຈ
+Name[lt]=LibreOffice Impress pristatymai
+Name[lv]=LibreOffice Impress prezentācijas
+Name[mg]=Fampisehoana LibreOffice Impress
+Name[mi]=Nga whakaaturanga LibreOffice Impress
+Name[mk]=Презентации на LibreOffice Impress
+Name[ml]=LibreOffice ഇംപ്രസ് അവതരണങ്ങൾ
+Name[mn]=LibreOffice Impress танилцуулга
 Name[mr]=लिबरऑफिस इंप्रेस सादरीकरणे
-Name[ms]=Persembahan Libreoffice Impress
-Name[mt]=Libreoffice Impress preżentazzjonijiet
-Name[my]=Libreoffice Impress တင်ပြချက်များ
-Name[ne]=Libreoffice प्रभाव प्रस्तुतीकरणहरू
-Name[nl]=Libreoffice Impress-presentaties
-Name[no]=Libreoffice Impress-presentasjoner
-Name[ny]=Libreoffice Impress zowonetsera
-Name[om]=Libreoffice Dhiyeessii dinqisiisaa
-Name[or]=Libreoffice ଉପସ୍ଥାପନାକୁ ପ୍ରଭାବିତ କରେ |
+Name[ms]=Persembahan LibreOffice Impress
+Name[mt]=LibreOffice Impress preżentazzjonijiet
+Name[my]=LibreOffice Impress တင်ပြချက်များ
+Name[ne]=LibreOffice प्रभाव प्रस्तुतीकरणहरू
+Name[nl]=LibreOffice Impress-presentaties
+Name[no]=LibreOffice Impress-presentasjoner
+Name[ny]=LibreOffice Impress zowonetsera
+Name[om]=LibreOffice Dhiyeessii dinqisiisaa
+Name[or]=LibreOffice ଉପସ୍ଥାପନାକୁ ପ୍ରଭାବିତ କରେ |
 Name[pa]=ਲਿਬਰੇਆਫਿਸ ਇਮਪ੍ਰੈਸ ਪੇਸ਼ਕਾਰੀਆਂ
-Name[pl]=Prezentacje Libreoffice Impress
-Name[ps]=ﻪﻧﻮﻨﺸټﻧﺰﯾﺮﭘ Libreoffice Impress ﺩ
-Name[pt]=Apresentações do Libreoffice Impress
-Name[qu]=Libreoffice Impresión nisqa rikuchiykuna
-Name[ro]=Prezentări Libreoffice Impress
-Name[ru]=Libreoffice Impress Презентации
-Name[rw]=Libreoffice Tanga ibitekerezo
-Name[sa]=Libreoffice प्रस्तुतीकरणानि प्रभावितानि
-Name[sd]=Libreoffice Impress ﻥﻮﻴٽﻧﻮﻴﺸﻴﭘ
-Name[si]=Libreoffice Impress ඉදිරිපත් කිරීම්
-Name[sk]=Prezentácie Libreoffice Impress
-Name[sl]=Predstavitve Libreoffice Impress
+Name[pl]=Prezentacje LibreOffice Impress
+Name[ps]=ﻪﻧﻮﻨﺸټﻧﺰﯾﺮﭘ LibreOffice Impress ﺩ
+Name[pt]=Apresentações do LibreOffice Impress
+Name[qu]=LibreOffice Impresión nisqa rikuchiykuna
+Name[ro]=Prezentări LibreOffice Impress
+Name[ru]=LibreOffice Impress Презентации
+Name[rw]=LibreOffice Tanga ibitekerezo
+Name[sa]=LibreOffice प्रस्तुतीकरणानि प्रभावितानि
+Name[sd]=LibreOffice Impress ﻥﻮﻴٽﻧﻮﻴﺸﻴﭘ
+Name[si]=LibreOffice Impress ඉදිරිපත් කිරීම්
+Name[sk]=Prezentácie LibreOffice Impress
+Name[sl]=Predstavitve LibreOffice Impress
 Name[sm]=Freeoffice Impress faaaliga
-Name[sn]=Libreoffice Impress mharidzo
-Name[so]=Libreoffice Impress bandhigyada
-Name[sq]=Prezantimet e Libreoffice Impress
-Name[st]=Libreoffice Impress linehelano
-Name[su]=Libreoffice Impress presentasi
-Name[sv]=Libreoffice Impress-presentationer
-Name[sw]=Libreoffice Impress maonyesho
-Name[ta]=Libreoffice விளக்கக்காட்சிகளை ஈர்க்கிறது
+Name[sn]=LibreOffice Impress mharidzo
+Name[so]=LibreOffice Impress bandhigyada
+Name[sq]=Prezantimet e LibreOffice Impress
+Name[st]=LibreOffice Impress linehelano
+Name[su]=LibreOffice Impress presentasi
+Name[sv]=LibreOffice Impress-presentationer
+Name[sw]=LibreOffice Impress maonyesho
+Name[ta]=LibreOffice விளக்கக்காட்சிகளை ஈர்க்கிறது
 Name[te]=లిబ్రేఆఫీస్ ఇంప్రెస్ ప్రెజెంటేషన్లు
-Name[tg]=Презентатсияҳои Libreoffice Impress
-Name[th]=การนำเสนอ Libreoffice สร้างความประทับใจ
+Name[tg]=Презентатсияҳои LibreOffice Impress
+Name[th]=การนำเสนอ LibreOffice สร้างความประทับใจ
 Name[ti]=ሊብሬኦፊስ ኢምፕረስ ኣቀራርባታት
-Name[tk]=Libreoffice Tanyşdyryşlary täsir ediň
-Name[tl]=Mga presentasyon ng Libreoffice Impress
-Name[to]=Libreoffice e ngaahi fakamatala fakaʻofoʻofa
-Name[tr]=Libreoffice Impress sunumları
-Name[ts]=Libreoffice Swikombiso swo hlamarisa
-Name[tt]=Libreoffice презентацияләр
-Name[tw]=Libreoffice Nsɛm a wɔka kyerɛ a ɛyɛ nwonwa
-Name[ty]=Libreoffice Impress presentations
-Name[ug]=Libreoffice ﺵﯗﺭﯘﺘﺷﯘﻧﻮﺗ ﺕﺍﺮﯩﺳەﺗ
-Name[uk]=Презентації Libreoffice Impress
-Name[ur]=Libreoffice Impress ﺰﻨﺸﯿﭩﻧﺰﯾﺮﭘ
-Name[uz]=Libreoffice Impress taqdimotlari
-Name[vi]=Bản trình bày Libreoffice Impress
-Name[xh]=Libreoffice Impress iintetho
-Name[yi]=Libreoffice זנאַשייטנאַזערפּ ססערפּמי
-Name[yo]=Awọn ifarahan Libreoffice Impress
-Name[zh]=Libreoffice Impress 演示文稿
-Name[zu]=Izethulo ze-Libreoffice Impress
-Name=Libreoffice Impress presentations
+Name[tk]=LibreOffice Tanyşdyryşlary täsir ediň
+Name[tl]=Mga presentasyon ng LibreOffice Impress
+Name[to]=LibreOffice e ngaahi fakamatala fakaʻofoʻofa
+Name[tr]=LibreOffice Impress sunumları
+Name[ts]=LibreOffice Swikombiso swo hlamarisa
+Name[tt]=LibreOffice презентацияләр
+Name[tw]=LibreOffice Nsɛm a wɔka kyerɛ a ɛyɛ nwonwa
+Name[ty]=LibreOffice Impress presentations
+Name[ug]=LibreOffice ﺵﯗﺭﯘﺘﺷﯘﻧﻮﺗ ﺕﺍﺮﯩﺳەﺗ
+Name[uk]=Презентації LibreOffice Impress
+Name[ur]=LibreOffice Impress ﺰﻨﺸﯿﭩﻧﺰﯾﺮﭘ
+Name[uz]=LibreOffice Impress taqdimotlari
+Name[vi]=Bản trình bày LibreOffice Impress
+Name[xh]=LibreOffice Impress iintetho
+Name[yi]=LibreOffice זנאַשייטנאַזערפּ ססערפּמי
+Name[yo]=Awọn ifarahan LibreOffice Impress
+Name[zh]=LibreOffice Impress 演示文稿
+Name[zu]=Izethulo ze-LibreOffice Impress
+Name=LibreOffice Impress presentations
 Icon=libreoffice-impress.png
 Comment[de]=Impressum Präsentationen
-Comment[es]=Libreoffice Impress: presentaciones
+Comment[es]=LibreOffice Impress: presentaciones
 Comment[af]=Beïndruk aanbiedings
 Comment[am]=አቀራረቦችን ያስደምሙ
 Comment[ar]=ﺔﻴﻤﻳﺪﻘﺘﻟﺍ ﺽﻭﺮﻌﻟﺍ ﺏﺎﺠﻋﺍ
