--- a/buildquantumvis/rootfs/rootfs-skeleton/usr/share/applications.in/sbase.desktop
+++ b/buildquantumvis/rootfs/rootfs-skeleton/usr/share/applications.in/sbase.desktop
@@ -1,133 +1,133 @@
 [Desktop Entry]
 Encoding=UTF-8
-Name[de]=Libreoffice Base-Datenbank
-Name[fr]=Base de données : Libreoffice Base
-Name[es]=Libreoffice Base: base de datos
-Name[af]=Libreoffice Base databasis
-Name[am]=Libreoffice Base ዳታቤዝ
-Name[ar]=Libreoffice Base ﺕﺎﻧﺎﻴﺑ ﺓﺪﻋﺎﻗ
+Name[de]=LibreOffice Base-Datenbank
+Name[fr]=Base de données : LibreOffice Base
+Name[es]=LibreOffice Base: base de datos
+Name[af]=LibreOffice Base databasis
+Name[am]=LibreOffice Base ዳታቤዝ
+Name[ar]=LibreOffice Base ﺕﺎﻧﺎﻴﺑ ﺓﺪﻋﺎﻗ
 Name[as]=লিবাৰঅফিচ ভিত্তি ডাটাবেছ
-Name[ay]=Libreoffice Base ukan yatiyawipa
-Name[az]=Libreoffice bazası verilənlər bazası
-Name[ba]=Libreoffice Base мәғлүмәт базаһы
-Name[be]=База дадзеных Libreoffice
-Name[bg]=База данни на Libreoffice
-Name[bm]=Libreoffice Base ka kunnafonidilan
-Name[bn]=Libreoffice বেস ডাটাবেস
+Name[ay]=LibreOffice Base ukan yatiyawipa
+Name[az]=LibreOffice bazası verilənlər bazası
+Name[ba]=LibreOffice Base мәғлүмәт базаһы
+Name[be]=База дадзеных LibreOffice
+Name[bg]=База данни на LibreOffice
+Name[bm]=LibreOffice Base ka kunnafonidilan
+Name[bn]=LibreOffice বেস ডাটাবেস
 Name[bo]=ལི་པུ་ལི་ཧྥེ་སི་རྟེན་གཞིའི་གཞི་གྲངས་མཛོད།
-Name[bs]=Baza podataka Libreoffice Base
-Name[ca]=Base de dades de Libreoffice Base
-Name[co]=Base di basa di basa di Libreoffice
-Name[cs]=Databáze Libreoffice Base
-Name[cy]=Cronfa ddata sail Libreoffice
-Name[da]=Libreoffice Base database
+Name[bs]=Baza podataka LibreOffice Base
+Name[ca]=Base de dades de LibreOffice Base
+Name[co]=Base di basa di basa di LibreOffice
+Name[cs]=Databáze LibreOffice Base
+Name[cy]=Cronfa ddata sail LibreOffice
+Name[da]=LibreOffice Base database
 Name[dv]=ސްބޭޓާޑޭ ސްބޭ ސްފީއޮރޭބްލި
-Name[ee]=Libreoffice Base ƒe nyatakakadzraɖoƒe
-Name[el]=Βάση δεδομένων Libreoffice Base
-Name[eo]=Libreoffice Baza datumbazo
-Name[et]=Libreoffice Basei andmebaas
-Name[eu]=Libreoffice Base datu-basea
-Name[fa]=Libreoffice Base ﻩﺩﺍﺩ ﻩﺎﮕﯾﺎﭘ
-Name[fi]=Libreoffice Base -tietokanta
-Name[fj]=Kato ni itukutuku ni Libreoffice
-Name[fo]=Libreoffice Base database
-Name[fy]=Libreoffice Base databank
-Name[ga]=Bunachar sonraí Libreoffice saor in aisce,
-Name[gd]=Stòr-dàta Libreoffice
-Name[gl]=Base de datos base de Libreoffice
-Name[gn]=Libreoffice Base mba’ekuaarã ryru
+Name[ee]=LibreOffice Base ƒe nyatakakadzraɖoƒe
+Name[el]=Βάση δεδομένων LibreOffice Base
+Name[eo]=LibreOffice Baza datumbazo
+Name[et]=LibreOffice Basei andmebaas
+Name[eu]=LibreOffice Base datu-basea
+Name[fa]=LibreOffice Base ﻩﺩﺍﺩ ﻩﺎﮕﯾﺎﭘ
+Name[fi]=LibreOffice Base -tietokanta
+Name[fj]=Kato ni itukutuku ni LibreOffice
+Name[fo]=LibreOffice Base database
+Name[fy]=LibreOffice Base databank
+Name[ga]=Bunachar sonraí LibreOffice saor in aisce,
+Name[gd]=Stòr-dàta LibreOffice
+Name[gl]=Base de datos base de LibreOffice
+Name[gn]=LibreOffice Base mba’ekuaarã ryru
 Name[gu]=લિબરઓફિસ બેઝ ડેટાબેઝ
-Name[ha]=Libreoffice Base database
-Name[he]=Libreoffice Base לש םינותנה דסמ
+Name[ha]=LibreOffice Base database
+Name[he]=LibreOffice Base לש םינותנה דסמ
 Name[hi]=लिब्रेऑफिस बेस डेटाबेस
-Name[hr]=Libreoffice Base baza podataka
-Name[ht]=Baz done Libreoffice Base
-Name[hu]=Libreoffice Base adatbázis
-Name[hy]=Libreoffice Base տվյալների բազա
-Name[id]=Basis data Basis Libreoffice
-Name[ig]=Ebe nchekwa data Libreoffice
-Name[is]=Libreoffice Base gagnagrunnur
+Name[hr]=LibreOffice Base baza podataka
+Name[ht]=Baz done LibreOffice Base
+Name[hu]=LibreOffice Base adatbázis
+Name[hy]=LibreOffice Base տվյալների բազա
+Name[id]=Basis data Basis LibreOffice
+Name[ig]=Ebe nchekwa data LibreOffice
+Name[is]=LibreOffice Base gagnagrunnur
 Name[it]=Base di dati di LibreOffice
 Name[iu]=ᓕᐳᕇᔅ ᑐᖅᑯᐃᕕᒃ ᖃᕆᑕᐅᔭᒃᑯᑦ
-Name[ja]=Libreofficeベースデータベース
-Name[jv]=Pangkalan data Libreoffice
-Name[ka]=Libreoffice Base მონაცემთა ბაზა
-Name[kk]=Libreoffice базасының дерекқоры
-Name[km]=មូលដ្ឋានទិន្នន័យ Libreoffice
-Name[kn]=Libreoffice ಬೇಸ್ ಡೇಟಾಬೇಸ್
-Name[ko]=Libreoffice 기본 데이터베이스
-Name[ku]=Database Libreoffice Base
-Name[ky]=Libreoffice базасы
-Name[la]=Libreoffice Base database
-Name[lb]=Libreoffice Base Datebank
-Name[lg]=Ekitabo kyamawulire ekya Libreoffice Base
-Name[ln]=Base ya ba données ya Base ya Libreoffice
-Name[lo]=ຖານຂໍ້ມູນ Libreoffice Base
-Name[lt]=Libreoffice bazės duomenų bazė
-Name[lv]=Libreoffice bāzes datu bāze
-Name[mg]=Database Libreoffice Base
+Name[ja]=LibreOfficeベースデータベース
+Name[jv]=Pangkalan data LibreOffice
+Name[ka]=LibreOffice Base მონაცემთა ბაზა
+Name[kk]=LibreOffice базасының дерекқоры
+Name[km]=មូលដ្ឋានទិន្នន័យ LibreOffice
+Name[kn]=LibreOffice ಬೇಸ್ ಡೇಟಾಬೇಸ್
+Name[ko]=LibreOffice 기본 데이터베이스
+Name[ku]=Database LibreOffice Base
+Name[ky]=LibreOffice базасы
+Name[la]=LibreOffice Base database
+Name[lb]=LibreOffice Base Datebank
+Name[lg]=Ekitabo kyamawulire ekya LibreOffice Base
+Name[ln]=Base ya ba données ya Base ya LibreOffice
+Name[lo]=ຖານຂໍ້ມູນ LibreOffice Base
+Name[lt]=LibreOffice bazės duomenų bazė
+Name[lv]=LibreOffice bāzes datu bāze
+Name[mg]=Database LibreOffice Base
 Name[mi]=Patengi raraunga Freeoffice Base
-Name[mk]=База на Libreoffice Base
-Name[ml]=Libreoffice ബേസ് ഡാറ്റാബേസ്
-Name[mn]=Libreoffice мэдээллийн бааз
+Name[mk]=База на LibreOffice Base
+Name[ml]=LibreOffice ബേസ് ഡാറ്റാബേസ്
+Name[mn]=LibreOffice мэдээллийн бааз
 Name[mr]=लिबरऑफिस बेस डेटाबेस
-Name[ms]=Pangkalan data Pangkalan Libreoffice
-Name[mt]=Bażi tad-database tal-Libreoffice
-Name[my]=Libreoffice Base ဒေတာဘေ့စ်
-Name[ne]=Libreoffice बेस डाटाबेस
-Name[nl]=Libreoffice Base-database
-Name[no]=Libreoffice Base-database
-Name[ny]=Libreoffice Base database
-Name[om]=Kuusdeetaa Buuuraa Libreoffice
+Name[ms]=Pangkalan data Pangkalan LibreOffice
+Name[mt]=Bażi tad-database tal-LibreOffice
+Name[my]=LibreOffice Base ဒေတာဘေ့စ်
+Name[ne]=LibreOffice बेस डाटाबेस
+Name[nl]=LibreOffice Base-database
+Name[no]=LibreOffice Base-database
+Name[ny]=LibreOffice Base database
+Name[om]=Kuusdeetaa Buuuraa LibreOffice
 Name[or]=ଲିବ୍ରେଫିସ୍ ବେସ୍ ଡାଟାବେସ୍ |
 Name[pa]=ਲਿਬਰੇਆਫਿਸ ਬੇਸ ਡੇਟਾਬੇਸ
-Name[pl]=Baza danych pakietu Libreoffice
+Name[pl]=Baza danych pakietu LibreOffice
 Name[ps]=ﺲﯿﺑﺎټﯾډ ﺲﯿﺑ ﺲﻓﺁ ﺮﺒﯿﻟ ﺩ
-Name[pt]=Base de dados Libreoffice Base
-Name[qu]=Libreoffice Base nisqa willay tantana
-Name[ro]=Baza de date Libreoffice
+Name[pt]=Base de dados LibreOffice Base
+Name[qu]=LibreOffice Base nisqa willay tantana
+Name[ro]=Baza de date LibreOffice
 Name[ru]=LibreOffice Base База данных
 Name[rw]=Ububiko bwibanze
-Name[sa]=Libreoffice आधारदत्तांशकोशः
-Name[sd]=Libreoffice ﺲﻴﺑﺎٽﻳڊ ﺲﻴﺑ
-Name[si]=Libreoffice Base දත්ත සමුදාය
-Name[sk]=Databáza Libreoffice Base
-Name[sl]=Baza podatkov Libreoffice Base
+Name[sa]=LibreOffice आधारदत्तांशकोशः
+Name[sd]=LibreOffice ﺲﻴﺑﺎٽﻳڊ ﺲﻴﺑ
+Name[si]=LibreOffice Base දත්ත සමුදාය
+Name[sk]=Databáza LibreOffice Base
+Name[sl]=Baza podatkov LibreOffice Base
 Name[sm]=Freeoffice Base database
-Name[sn]=Libreoffice Base database
-Name[so]=Macluumaadka Saldhigga Libreoffice
-Name[sq]=Baza e të dhënave Libreoffice
-Name[st]=Libreoffice Base database
-Name[su]=Pangkalan data Libreoffice
-Name[sv]=Libreoffice Base-databas
-Name[sw]=Libreoffice Base database
-Name[ta]=Libreoffice அடிப்படை தரவுத்தளம்
-Name[te]=Libreoffice బేస్ డేటాబేస్
-Name[tg]=Пойгоҳи Libreoffice
-Name[th]=ฐานข้อมูล Libreoffice Base
+Name[sn]=LibreOffice Base database
+Name[so]=Macluumaadka Saldhigga LibreOffice
+Name[sq]=Baza e të dhënave LibreOffice
+Name[st]=LibreOffice Base database
+Name[su]=Pangkalan data LibreOffice
+Name[sv]=LibreOffice Base-databas
+Name[sw]=LibreOffice Base database
+Name[ta]=LibreOffice அடிப்படை தரவுத்தளம்
+Name[te]=LibreOffice బేస్ డేటాబేస్
+Name[tg]=Пойгоҳи LibreOffice
+Name[th]=ฐานข้อมูล LibreOffice Base
 Name[ti]=ሊብሬኦፊስ መሰረት ዳታቤዝ
-Name[tk]=Libreoffice Base maglumat bazasy
-Name[tl]=Database ng Libreoffice Base
-Name[to]=Libreoffice Base database
-Name[tr]=Libreoffice Temel veritabanı
-Name[ts]=Dathabeyisi ya Libreoffice Base
-Name[tt]=Libreoffice Base базасы
-Name[tw]=Libreoffice Base databea a ɛwɔ hɔ
-Name[ty]=Libreoffice Base database
-Name[ug]=Libreoffice Base ﻰﻧﺍﺪﻧﺎﺳ
-Name[uk]=База даних Libreoffice
+Name[tk]=LibreOffice Base maglumat bazasy
+Name[tl]=Database ng LibreOffice Base
+Name[to]=LibreOffice Base database
+Name[tr]=LibreOffice Temel veritabanı
+Name[ts]=Dathabeyisi ya LibreOffice Base
+Name[tt]=LibreOffice Base базасы
+Name[tw]=LibreOffice Base databea a ɛwɔ hɔ
+Name[ty]=LibreOffice Base database
+Name[ug]=LibreOffice Base ﻰﻧﺍﺪﻧﺎﺳ
+Name[uk]=База даних LibreOffice
 Name[ur]=ﺲﯿﺑ ﺎﭩﯾﮈ ﺲﯿﺑ ﺲﻓﺁ ﺮﺒﯿﻟ
-Name[uz]=Libreoffice bazasi malumotlar bazasi
-Name[vi]=Cơ sở dữ liệu cơ sở Libreoffice
-Name[xh]=Libreoffice Base database
-Name[yi]=Libreoffice Base סייבאַטאַד
-Name[yo]=Libreoffice Base database
-Name[zh]=Libreoffice 基础数据库
-Name[zu]=Libreoffice Base database
-Name=Libreoffice Base database
+Name[uz]=LibreOffice bazasi malumotlar bazasi
+Name[vi]=Cơ sở dữ liệu cơ sở LibreOffice
+Name[xh]=LibreOffice Base database
+Name[yi]=LibreOffice Base סייבאַטאַד
+Name[yo]=LibreOffice Base database
+Name[zh]=LibreOffice 基础数据库
+Name[zu]=LibreOffice Base database
+Name=LibreOffice Base database
 Icon=libreoffice-base.png
 Comment[de]=Basisdatenbank
-Comment[es]=Libreoffice Base: base de datos
+Comment[es]=LibreOffice Base: base de datos
 Comment[af]=Basis databasis
 Comment[am]=የመሠረት ዳታቤዝ
 Comment[ar]=ﺔﻴﺳﺎﺳﻷ﻿ﺍ ﺕﺎﻧﺎﻴﺒﻟﺍ ﺓﺪﻋﺎﻗ
