--- a/buildquantumvis/rootfs/rootfs-skeleton/usr/share/applications.in/swriter.desktop
+++ b/buildquantumvis/rootfs/rootfs-skeleton/usr/share/applications.in/swriter.desktop
@@ -1,133 +1,133 @@
 [Desktop Entry]
 Encoding=UTF-8
-Name[de]=Libreoffice Writer Textverarbeitung
-Name[fr]=Traitement de texte : Libreoffice Writer
-Name[es]=Libreoffice Writer: procesador de textos
-Name[af]=Libreoffice Writer-woordverwerker
-Name[am]=Libreoffice Writer የቃላት አቀናባሪ
-Name[ar]=Libreoffice Writer ﺹﻮﺼﻨﻟﺍ ﺞﻟﺎﻌﻣ
-Name[as]=Libreoffice Writer ৱৰ্ড প্ৰচেছৰ
-Name[ay]=Libreoffice Qillqirix arunak lurayiri
-Name[az]=Libreoffice Writer mətn prosessoru
+Name[de]=LibreOffice Writer Textverarbeitung
+Name[fr]=Traitement de texte : LibreOffice Writer
+Name[es]=LibreOffice Writer: procesador de textos
+Name[af]=LibreOffice Writer-woordverwerker
+Name[am]=LibreOffice Writer የቃላት አቀናባሪ
+Name[ar]=LibreOffice Writer ﺹﻮﺼﻨﻟﺍ ﺞﻟﺎﻌﻣ
+Name[as]=LibreOffice Writer ৱৰ্ড প্ৰচেছৰ
+Name[ay]=LibreOffice Qillqirix arunak lurayiri
+Name[az]=LibreOffice Writer mətn prosessoru
 Name[ba]=Либреоффик Яҙыусы һүҙ эшкәртеүсе
-Name[be]=Тэкставы працэсар Libreoffice Writer
-Name[bg]=Текстов процесор Libreoffice Writer
-Name[bm]=Libreoffice Sɛbɛnnikɛla daɲɛw labɛncogo
-Name[bn]=Libreoffice রাইটার ওয়ার্ড প্রসেসর
+Name[be]=Тэкставы працэсар LibreOffice Writer
+Name[bg]=Текстов процесор LibreOffice Writer
+Name[bm]=LibreOffice Sɛbɛnnikɛla daɲɛw labɛncogo
+Name[bn]=LibreOffice রাইটার ওয়ার্ড প্রসেসর
 Name[bo]=ལི་པུ་ལི་ཧྥེ་སི་རྩོམ་པ་པོའི་ཡི་གེ་ཐག་གཅོད་འཕྲུལ་ཆས།
-Name[bs]=Libreoffice Writer procesor teksta
-Name[ca]=Processador de textos Libreoffice Writer
-Name[co]=Processore di testi Libreoffice Writer
-Name[cs]=Textový procesor Libreoffice Writer
-Name[cy]=Prosesydd geiriau Libreoffice Writer
-Name[da]=Libreoffice Writer tekstbehandlingsprogram
+Name[bs]=LibreOffice Writer procesor teksta
+Name[ca]=Processador de textos LibreOffice Writer
+Name[co]=Processore di testi LibreOffice Writer
+Name[cs]=Textový procesor LibreOffice Writer
+Name[cy]=Prosesydd geiriau LibreOffice Writer
+Name[da]=LibreOffice Writer tekstbehandlingsprogram
 Name[dv]=ރސަސެރޮޕް ޑްވޯ ރޓައިރަ ސްފީއޮރޭބްލި
-Name[ee]=Libreoffice Nuŋlɔla ƒe nyawo ƒe dɔwɔwɔ
-Name[el]=Επεξεργαστής κειμένου Libreoffice Writer
-Name[eo]=Libreoffice Writer tekstprilaborilo
-Name[et]=Libreoffice Writer tekstitöötlusprogramm
-Name[eu]=Libreoffice Writer testu-prozesadorea
-Name[fa]=Libreoffice Writer ﺯﺍﺩﺮﭘ ﻩﮊﺍﻭ
-Name[fi]=Libreoffice Writer tekstinkäsittelyohjelma
-Name[fj]=Libreoffice dauvolaivola ni processor
-Name[fo]=Libreoffice skrivaer word processor
-Name[fy]=Libreoffice Writer tekstferwurker
-Name[ga]=Próiseálaí focal Libreoffice Writer
-Name[gd]=Pròiseasar facal Libreoffice Writer
-Name[gl]=Procesador de textos Libreoffice Writer
-Name[gn]=Libreoffice Haihára ñe’ẽryru
+Name[ee]=LibreOffice Nuŋlɔla ƒe nyawo ƒe dɔwɔwɔ
+Name[el]=Επεξεργαστής κειμένου LibreOffice Writer
+Name[eo]=LibreOffice Writer tekstprilaborilo
+Name[et]=LibreOffice Writer tekstitöötlusprogramm
+Name[eu]=LibreOffice Writer testu-prozesadorea
+Name[fa]=LibreOffice Writer ﺯﺍﺩﺮﭘ ﻩﮊﺍﻭ
+Name[fi]=LibreOffice Writer tekstinkäsittelyohjelma
+Name[fj]=LibreOffice dauvolaivola ni processor
+Name[fo]=LibreOffice skrivaer word processor
+Name[fy]=LibreOffice Writer tekstferwurker
+Name[ga]=Próiseálaí focal LibreOffice Writer
+Name[gd]=Pròiseasar facal LibreOffice Writer
+Name[gl]=Procesador de textos LibreOffice Writer
+Name[gn]=LibreOffice Haihára ñe’ẽryru
 Name[gu]=લીબરઓફીસ રાઈટર વર્ડ પ્રોસેસર
-Name[ha]=Libreoffice Writer word processor
-Name[he]=Libreoffice Writer לש םילילמת דבעמ
+Name[ha]=LibreOffice Writer word processor
+Name[he]=LibreOffice Writer לש םילילמת דבעמ
 Name[hi]=लिबरऑफिस राइटर वर्ड प्रोसेसर
-Name[hr]=Libreoffice Writer program za obradu teksta
-Name[ht]=Pwosesè tèks Libreoffice Writer
-Name[hu]=Libreoffice Writer szövegszerkesztő
-Name[hy]=Libreoffice Writer բառային պրոցեսոր
-Name[id]=Pengolah kata Libreoffice Writer
-Name[ig]=Libreoffice Ode ihe nhazi okwu
-Name[is]=Libreoffice Writer ritvinnsluforrit
+Name[hr]=LibreOffice Writer program za obradu teksta
+Name[ht]=Pwosesè tèks LibreOffice Writer
+Name[hu]=LibreOffice Writer szövegszerkesztő
+Name[hy]=LibreOffice Writer բառային պրոցեսոր
+Name[id]=Pengolah kata LibreOffice Writer
+Name[ig]=LibreOffice Ode ihe nhazi okwu
+Name[is]=LibreOffice Writer ritvinnsluforrit
 Name[it]=Elaboratore di testi LibreOffice Writer
 Name[iu]=ᓕᐳᕇᔅ ᑎᑎᕋᖅᑎ ᑎᑎᕋᖅᐸᓪᓕᐊᔾᔪᑎ
-Name[ja]=Libreoffice Writer ワードプロセッサ
-Name[jv]=Pangolah tembung Libreoffice Writer
-Name[ka]=Libreoffice Writer ტექსტური პროცესორი
-Name[kk]=Libreoffice Writer мәтіндік процессоры
-Name[km]=កម្មវិធីវាយអត្ថបទ Libreoffice Writer
+Name[ja]=LibreOffice Writer ワードプロセッサ
+Name[jv]=Pangolah tembung LibreOffice Writer
+Name[ka]=LibreOffice Writer ტექსტური პროცესორი
+Name[kk]=LibreOffice Writer мәтіндік процессоры
+Name[km]=កម្មវិធីវាយអត្ថបទ LibreOffice Writer
 Name[kn]=ಲಿಬ್ರೆಆಫೀಸ್ ರೈಟರ್ ವರ್ಡ್ ಪ್ರೊಸೆಸರ್
-Name[ko]=Libreoffice 작가 워드 프로세서
-Name[ku]=Pêvajoya peyva Libreoffice Writer
-Name[ky]=Libreoffice Writer текст процессору
-Name[la]=Libreoffice Writer word processor
-Name[lb]=Libreoffice Writer Wuertveraarbechter
-Name[lg]=Libreoffice Omuwandiisi omukozi webigambo
-Name[ln]=Libreoffice Mokomi mobongisi ya maloba
-Name[lo]=ໂຮງງານຜະລິດຄໍາ Libreoffice Writer
-Name[lt]=Libreoffice Writer tekstų rengyklė
-Name[lv]=Libreoffice Writer tekstapstrādes programma
-Name[mg]=Mpanoratra teny Libreoffice Mpanoratra
-Name[mi]=Tukatuka kupu Kaituhi Libreoffice
-Name[mk]=Libreoffice Writer процесор на текст
+Name[ko]=LibreOffice 작가 워드 프로세서
+Name[ku]=Pêvajoya peyva LibreOffice Writer
+Name[ky]=LibreOffice Writer текст процессору
+Name[la]=LibreOffice Writer word processor
+Name[lb]=LibreOffice Writer Wuertveraarbechter
+Name[lg]=LibreOffice Omuwandiisi omukozi webigambo
+Name[ln]=LibreOffice Mokomi mobongisi ya maloba
+Name[lo]=ໂຮງງານຜະລິດຄໍາ LibreOffice Writer
+Name[lt]=LibreOffice Writer tekstų rengyklė
+Name[lv]=LibreOffice Writer tekstapstrādes programma
+Name[mg]=Mpanoratra teny LibreOffice Mpanoratra
+Name[mi]=Tukatuka kupu Kaituhi LibreOffice
+Name[mk]=LibreOffice Writer процесор на текст
 Name[ml]=ലിബ്രെഓഫീസ് റൈറ്റർ വേഡ് പ്രോസസർ
-Name[mn]=Libreoffice Writer текст процессор
+Name[mn]=LibreOffice Writer текст процессор
 Name[mr]=लिबर ऑफिस रायटर वर्ड प्रोसेसर
-Name[ms]=Pemproses perkataan Penulis Libreoffice
-Name[mt]=Proċessur tal-kliem Libreoffice Writer
-Name[my]=Libreoffice Writer စကားလုံး ပရိုဆက်ဆာ
-Name[ne]=Libreoffice लेखक शब्द प्रोसेसर
-Name[nl]=Libreoffice Writer-tekstverwerker
-Name[no]=Libreoffice Writer tekstbehandler
-Name[ny]=Libreoffice Wolemba mawu purosesa
-Name[om]=Libreoffice Barreessaa jechoota adeemsiftuu
+Name[ms]=Pemproses perkataan Penulis LibreOffice
+Name[mt]=Proċessur tal-kliem LibreOffice Writer
+Name[my]=LibreOffice Writer စကားလုံး ပရိုဆက်ဆာ
+Name[ne]=LibreOffice लेखक शब्द प्रोसेसर
+Name[nl]=LibreOffice Writer-tekstverwerker
+Name[no]=LibreOffice Writer tekstbehandler
+Name[ny]=LibreOffice Wolemba mawu purosesa
+Name[om]=LibreOffice Barreessaa jechoota adeemsiftuu
 Name[or]=ଲିବ୍ରେଫିସ୍ ରାଇଟର୍ ୱାର୍ଡ ପ୍ରୋସେସର୍ |
 Name[pa]=ਲਿਬਰੇਆਫਿਸ ਰਾਈਟਰ ਵਰਡ ਪ੍ਰੋਸੈਸਰ
-Name[pl]=edytor tekstu Libreoffice Writer
-Name[ps]=ﺮﺴﯿﺳﻭﺮﭘ ﻪﻤﻠﮐ ﻝﺍﻮﮑﯿﻟ Libreoffice ﺩ
-Name[pt]=Processador de texto Libreoffice Writer
-Name[qu]=Libreoffice Qillqaq simikuna ruwaq
-Name[ro]=Procesor de text Libreoffice Writer
-Name[ru]=Libreoffice Writer Текстовый процессор
-Name[rw]=Libreoffice Umwanditsi ijambo gutunganya
-Name[sa]=Libreoffice Writer शब्दसंसाधकः
-Name[sd]=Libreoffice Writer ﺮﺴﻴﺳﻭﺮﭘ ﻆﻔﻟ
-Name[si]=Libreoffice Writer වචන සකසනය
-Name[sk]=Textový procesor Libreoffice Writer
-Name[sl]=Urejevalnik besedil Libreoffice Writer
+Name[pl]=edytor tekstu LibreOffice Writer
+Name[ps]=ﺮﺴﯿﺳﻭﺮﭘ ﻪﻤﻠﮐ ﻝﺍﻮﮑﯿﻟ LibreOffice ﺩ
+Name[pt]=Processador de texto LibreOffice Writer
+Name[qu]=LibreOffice Qillqaq simikuna ruwaq
+Name[ro]=Procesor de text LibreOffice Writer
+Name[ru]=LibreOffice Writer Текстовый процессор
+Name[rw]=LibreOffice Umwanditsi ijambo gutunganya
+Name[sa]=LibreOffice Writer शब्दसंसाधकः
+Name[sd]=LibreOffice Writer ﺮﺴﻴﺳﻭﺮﭘ ﻆﻔﻟ
+Name[si]=LibreOffice Writer වචන සකසනය
+Name[sk]=Textový procesor LibreOffice Writer
+Name[sl]=Urejevalnik besedil LibreOffice Writer
 Name[sm]=Freeoffice Tusitala upu faiga
-Name[sn]=Libreoffice Munyori izwi processor
-Name[so]=Libreoffice Writer word processor
-Name[sq]=Përpunues teksti Libreoffice Writer
-Name[st]=Sesebelisoa sa mantsoe sa Libreoffice Mongoli
-Name[su]=Libreoffice Writer prosesor kecap
-Name[sv]=Libreoffice Writer ordbehandlare
-Name[sw]=Kichakataji cha maneno cha Mwandishi wa Libreoffice
-Name[ta]=Libreoffice Writer சொல் செயலி
+Name[sn]=LibreOffice Munyori izwi processor
+Name[so]=LibreOffice Writer word processor
+Name[sq]=Përpunues teksti LibreOffice Writer
+Name[st]=Sesebelisoa sa mantsoe sa LibreOffice Mongoli
+Name[su]=LibreOffice Writer prosesor kecap
+Name[sv]=LibreOffice Writer ordbehandlare
+Name[sw]=Kichakataji cha maneno cha Mwandishi wa LibreOffice
+Name[ta]=LibreOffice Writer சொல் செயலி
 Name[te]=లిబ్రేఆఫీస్ రైటర్ వర్డ్ ప్రాసెసర్
-Name[tg]=Протсессори матнии Libreoffice Writer
-Name[th]=โปรแกรมประมวลผลคำ Libreoffice Writer
+Name[tg]=Протсессори матнии LibreOffice Writer
+Name[th]=โปรแกรมประมวลผลคำ LibreOffice Writer
 Name[ti]=ሊብሬኦፊስ ጸሓፊ ቃላት መስርሒ
-Name[tk]=Libreoffice iterazyjy söz prosessory
-Name[tl]=Libreoffice Writer word processor
-Name[to]=Libreoffice foʻi lea ʻa e tokotaha faʻu tohi processor
-Name[tr]=Libreoffice Writer kelime işlemci
-Name[ts]=Libreoffice Mutsari muendli wa marito
-Name[tt]=Libreoffice Writer сүз процессоры
-Name[tw]=Libreoffice Ɔkyerɛwfo nsɛmfua nhyehyɛe
-Name[ty]=Libreoffice Taata papai parau
-Name[ug]=Libreoffice ﭺﯘﻐﻠﯩﻗ ﭖەﺭەﺗ ﺮﯩﺑ ﺯﯚﺳ ﻰﭼﯘﻏﺯﺎﻳ
-Name[uk]=Текстовий процесор Libreoffice Writer
-Name[ur]=Libreoffice ﺮﺴﯿﺳﻭﺮﭘ ﮈﺭﻭ ﺮﭩﺋﺍﺭ
-Name[uz]=Libreoffice Writer matn protsessori
-Name[vi]=Trình xử lý văn bản Libreoffice Writer
-Name[xh]=Iprosesa yegama loMbhali weLibreoffice
-Name[yi]=Libreoffice Writer רעסעסאַרפּ טראָוו
-Name[yo]=Libreoffice Onkọwe ọrọ isise
-Name[zh]=Libreoffice Writer 文字处理器
-Name[zu]=Iphrosesa yamagama ye-Libreoffice Writer
-Name=Libreoffice Writer word processor
+Name[tk]=LibreOffice iterazyjy söz prosessory
+Name[tl]=LibreOffice Writer word processor
+Name[to]=LibreOffice foʻi lea ʻa e tokotaha faʻu tohi processor
+Name[tr]=LibreOffice Writer kelime işlemci
+Name[ts]=LibreOffice Mutsari muendli wa marito
+Name[tt]=LibreOffice Writer сүз процессоры
+Name[tw]=LibreOffice Ɔkyerɛwfo nsɛmfua nhyehyɛe
+Name[ty]=LibreOffice Taata papai parau
+Name[ug]=LibreOffice ﭺﯘﻐﻠﯩﻗ ﭖەﺭەﺗ ﺮﯩﺑ ﺯﯚﺳ ﻰﭼﯘﻏﺯﺎﻳ
+Name[uk]=Текстовий процесор LibreOffice Writer
+Name[ur]=LibreOffice ﺮﺴﯿﺳﻭﺮﭘ ﮈﺭﻭ ﺮﭩﺋﺍﺭ
+Name[uz]=LibreOffice Writer matn protsessori
+Name[vi]=Trình xử lý văn bản LibreOffice Writer
+Name[xh]=Iprosesa yegama loMbhali weLibreOffice
+Name[yi]=LibreOffice Writer רעסעסאַרפּ טראָוו
+Name[yo]=LibreOffice Onkọwe ọrọ isise
+Name[zh]=LibreOffice Writer 文字处理器
+Name[zu]=Iphrosesa yamagama ye-LibreOffice Writer
+Name=LibreOffice Writer word processor
 Icon=libreoffice-writer.png
 Comment[de]=Textverarbeitung für Schriftsteller
-Comment[es]=Libreoffice Writer: procesador de textos
+Comment[es]=LibreOffice Writer: procesador de textos
 Comment[af]=Skrywer woordverwerker
 Comment[am]=የጽሑፍ ፕሮሰሰር
 Comment[ar]=ﺹﻮﺼﻨﻟﺍ ﺞﻟﺎﻌﻣ ﺐﺗﺎﻛ
