--- a/buildquantumvis/rootfs/rootfs-skeleton/usr/share/applications.in/tvpanel.desktop
+++ b/buildquantumvis/rootfs/rootfs-skeleton/usr/share/applications.in/tvpanel.desktop
@@ -6,7 +6,7 @@ Name[de]=TV-Panel
 Name[el]=Πάνελ τηλεόρασης
 Name[es]=panel de televisión
 Name[fi]=TV-paneeli
-Name[fr]=Panneau TV
+Name[fr]=Panneau TV : TV Panel
 Name[hu]=TV panel
 Name[is]=Sjónvarpsborð
 Name[it]=Pannello televisivo
